@@ -29,88 +29,83 @@ import java.util.stream.Collectors;
 
 @Controller
 @RequestMapping("/view/student")
-public class ViewControllerStudent {
-    private final ScheduleService scheduleService;
-    private final UserService userService;
-    private final UserMapper userMapper;
-    private final AttendanceService attendanceService;
-    private final GradeService gradeService;
-    private final SessionService sessionService;
-    private final StudentService studentService;
-    private final ScheduleMapper scheduleMapper;
-    private final GradeMapper gradeMapper;
+public class ViewControllerStudent{
+  private final ScheduleService scheduleService;
+  private final UserService userService;
+  private final UserMapper userMapper;
+  private final AttendanceService attendanceService;
+  private final GradeService gradeService;
+  private final SessionService sessionService;
+  private final StudentService studentService;
+  private final ScheduleMapper scheduleMapper;
+  private final GradeMapper gradeMapper;
 
+  public ViewControllerStudent(ScheduleMapper scheduleMapper, ScheduleService scheduleService,
+      UserService userService, UserMapper userMapper, AttendanceService attendanceService,
+      GradeService gradeService, GradeMapper gradeMapper, SessionService sessionService,
+      StudentService studentService) {
+    this.scheduleService = scheduleService;
+    this.userService = userService;
+    this.userMapper = userMapper;
+    this.attendanceService = attendanceService;
+    this.gradeService = gradeService;
+    this.gradeMapper = gradeMapper;
+    this.sessionService = sessionService;
+    this.studentService = studentService;
+    this.scheduleMapper = scheduleMapper;
+  }
 
-    public ViewControllerStudent(ScheduleMapper scheduleMapper, ScheduleService scheduleService, UserService userService, UserMapper userMapper, AttendanceService attendanceService, GradeService gradeService, GradeMapper gradeMapper, SessionService sessionService, StudentService studentService) {
-        this.scheduleService = scheduleService;
-        this.userService = userService;
-        this.userMapper = userMapper;
-        this.attendanceService = attendanceService;
-        this.gradeService = gradeService;
-        this.gradeMapper = gradeMapper;
-        this.sessionService = sessionService;
-        this.studentService = studentService;
-        this.scheduleMapper = scheduleMapper;
-    }
+  @GetMapping("/mainpage")
+  public Mono<String> mainpage(Model model) {
+    return sessionService.getUserId().flatMap(userId -> {
+      User user = userService.getUserById(userId);
+      UserDto userDto = userMapper.toDto(user);
+      model.addAttribute("user",userDto);
+      return Mono.just("student/student_mainpage");
+    });
+  }
 
-    @GetMapping("/mainpage")
-    public Mono<String> mainpage(Model model) {
-        return sessionService.getUserId()
-                .flatMap(userId -> {
-                    User user = userService.getUserById(userId);
-                    UserDto userDto = userMapper.toDto(user);
-                    model.addAttribute("user", userDto);
-                    return Mono.just("student/student_mainpage");
-                });
-    }
+  @GetMapping("/remark")
+  public Mono<String> getRemarks(Model model) {
+    return sessionService.getUserId().flatMap(userId -> {
+      List<RemarkDto> remarksDto = studentService.getRemarksForStudent(userId); // Użycie metody w
+                                                                                // StudentService
+      model.addAttribute("remarks",remarksDto);
+      return Mono.just("student/student_remark");
+    });
+  }
 
+  @GetMapping("/schedule")
+  public Mono<String> getStudentSchedule(Model model) {
+    return sessionService.getUserId().flatMap(userId -> {
+      Student student = studentService.getStudentById(userId);
+      List<Schedule> schedules = scheduleService
+          .getScheduleByClassId(student.getSchoolClass().getSchoolClassId());
+      List<ScheduleDto> scheduleDtos = schedules.stream().map(scheduleMapper::toDto)
+          .collect(Collectors.toList());
+      model.addAttribute("schedules",scheduleDtos);
+      return Mono.just("student/student_schedule");
+    });
+  }
 
-    @GetMapping("/remark")
-    public Mono<String> getRemarks(Model model) {
-        return sessionService.getUserId()
-                .flatMap(userId -> {
-                    List<RemarkDto> remarksDto = studentService.getRemarksForStudent(userId); // Użycie metody w StudentService
-                    model.addAttribute("remarks", remarksDto);
-                    return Mono.just("student/student_remark");
-                });
-    }
+  @GetMapping("/grade")
+  public Mono<String> getStudentGrades(Model model) {
+    return sessionService.getUserId().flatMap(userId -> {
+      List<Grade> grades = gradeService.getGradesForStudent(userId);
 
-    @GetMapping("/schedule")
-    public Mono<String> getStudentSchedule(Model model) {
-        return sessionService.getUserId()
-                .flatMap(userId -> {
-                    Student student = studentService.getStudentById(userId);
-                    List<Schedule> schedules = scheduleService.getScheduleByClassId(student.getSchoolClass().getSchoolClassId());
-                    List<ScheduleDto> scheduleDtos = schedules.stream()
-                            .map(scheduleMapper::toDto)
-                            .collect(Collectors.toList());
-                    model.addAttribute("schedules", scheduleDtos);
-                    return Mono.just("student/student_schedule");
-                });
-    }
+      List<GradeDto> gradeDtos = grades.stream().map(gradeMapper::toDto).toList();
 
-    @GetMapping("/grade")
-    public Mono<String> getStudentGrades(Model model) {
-        return sessionService.getUserId()
-                .flatMap(userId -> {
-                    List<Grade> grades = gradeService.getGradesForStudent(userId);
+      model.addAttribute("grades",gradeDtos);
+      return Mono.just("student/student_grade");
+    });
+  }
 
-                    List<GradeDto> gradeDtos = grades.stream()
-                            .map(gradeMapper::toDto)
-                            .toList();
-
-                    model.addAttribute("grades", gradeDtos);
-                    return Mono.just("student/student_grade");
-                });
-    }
-
-    @GetMapping("/attendance")
-    public Mono<String> getAttendance(Model model) {
-        return sessionService.getUserId()
-                .flatMap(userId -> {
-                    List<Attendance> attendances = attendanceService.getAttendancesForStudent(userId);
-                    model.addAttribute("attendances", attendances);
-                    return Mono.just("student/student_attendance");
-                });
-    }
+  @GetMapping("/attendance")
+  public Mono<String> getAttendance(Model model) {
+    return sessionService.getUserId().flatMap(userId -> {
+      List<Attendance> attendances = attendanceService.getAttendancesForStudent(userId);
+      model.addAttribute("attendances",attendances);
+      return Mono.just("student/student_attendance");
+    });
+  }
 }
